# LearnOpenGL2026Bilibili

./: .gitignore  CMakeLists.txt  main.cpp
application/: CMakeLists.txt  application.cpp  assimpLoader.cpp
application/include/: application.h  assimpLoader.h
assets/shaders/: cube.frag  cube.vert  cubeball.frag  fragment.frag  phong.frag  phongenv.frag  phonginstance.frag  phonginstance.vert  screenplane.frag  screenplane.vert  vertex.vert  white.vert
assets/shaders/advanced/: phongnormalmap.frag  phongnormalmap.vert  phongparallaxmap.frag  phongparallaxmap.vert  phongshadow.frag  phongshadow.vert  shadow.frag  shadow.vert
camera/: CMakeLists.txt  camera.cpp  cameracontrol.cpp  gamecameracontrol.cpp  orthographiccamera.cpp  perspectivecamera.cpp  trackballcameracontrol.cpp
camera/include/: camera.h  cameracontrol.h  gamecameracontrol.h  orthographiccamera.h  perspectivecamera.h  trackballcameracontrol.h
docs/: class_diagram.puml  render_flow.puml
glframework/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  geometry.cpp  instancedmesh.cpp  instancedmesh.h  mesh.cpp  object.cpp  scene.cpp  shader.cpp  texture.cpp
glframework/include/: core.h  geometry.h  mesh.h  object.h  scene.h  shader.h  texture.h
glframework/light/: ambientlight.cpp  ambientlight.h  directionallight.cpp  directionallight.h  light.cpp  light.h  pointlight.cpp  pointlight.h
glframework/light/shadow/: directionallightshadow.cpp  directionallightshadow.h  shadow.cpp  shadow.h
glframework/material/: cubeballmaterial.cpp  cubeballmaterial.h  cubematerial.cpp  cubematerial.h  material.cpp  material.h  phongenvmaterial.cpp  phongenvmaterial.h  phonginstancematerial.cpp  phonginstancematerial.h  phongmaterial.cpp  phongmaterial.h  screenplanematerial.cpp  screenplanematerial.h  whitematerial.cpp  whitematerial.h
glframework/material/advanced/: phongnormalmapmaterial.cpp  phongnormalmapmaterial.h  phongparallaxmapmaterial.cpp  phongparallaxmapmaterial.h  phongshadowmapmaterial.cpp  phongshadowmapmaterial.h
glframework/renderer/: renderer.cpp  renderer.h
tools/: CMakeLists.txt  tools.cpp
tools/include/: tools.h
wrapper/: CMakeLists.txt  checkerror.cpp
wrapper/include/: checkerror.h
